--- a/app/src/main/res/layout/fragment_challenge_creator.xml
+++ b/app/src/main/res/layout/fragment_challenge_creator.xml
@@ -24,7 +24,7 @@
         android:layout_height="56dp"
         android:stepSize="1000.0"
         android:value="6000"
-        android:valueFrom="0.0"
+        android:valueFrom="1000.0"
         android:valueTo="20000.0"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -81,6 +81,36 @@
             android:id="@+id/description_input"
             android:layout_width="match_parent"
             android:layout_height="71dp"
+            android:autoSizeTextType="uniform"
+            android:ellipsize="start"
+            android:gravity="center_horizontal"
+            android:inputType="textMultiLine" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/title_textfield"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="start"
+        android:gravity="center_horizontal"
+        android:hint="Challenge-Titel"
+        app:counterEnabled="true"
+        app:counterMaxLength="30"
+        app:helperText="Maximale Zeichen:"
+        app:helperTextEnabled="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.32999998">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/title_input"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:autoSizeTextType="uniform"
             android:ellipsize="start"
             android:gravity="center_horizontal"
