--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -19,5 +19,10 @@
         android:id="@+id/friends_page"
         android:enabled="true"
         android:icon="@drawable/ic__0117386491556281663"
-        android:title="@string/sozial" ></item>
+        android:title="@string/sozial" />
+    <item
+        android:id="@+id/logout_bar"
+        android:enabled="true"
+        android:icon="@drawable/ic_logout"
+        android:title="Ausloggen" />
 </menu>
