--- a/app/src/main/res/layout/fragment_challenge_overview.xml
+++ b/app/src/main/res/layout/fragment_challenge_overview.xml
@@ -31,4 +31,40 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/joinChallengeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beitreten"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/joinChallenge"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.050000012" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/neverUsed"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="252dp"
+        android:layout_height="58dp"
+        android:ellipsize="start"
+        android:gravity="center_horizontal"
+        android:hint="Challengetitel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.04000002">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/joinChallenge"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:ellipsize="start"
+            android:gravity="center_horizontal" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
