--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -66,7 +66,7 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="birthdate"
+            android:text="Geburtsdatum"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,10 +77,10 @@
 
         <EditText
             android:id="@+id/editTextTextPostalAddress"
-            android:layout_width="199dp"
+            android:layout_width="220dp"
             android:layout_height="45dp"
             android:ems="10"
-            android:hint="address_hint"
+            android:hint="Adresse"
             android:inputType="textPostalAddress"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,10 +91,10 @@
 
         <EditText
             android:id="@+id/editTextDate"
-            android:layout_width="85dp"
+            android:layout_width="151dp"
             android:layout_height="45dp"
             android:ems="10"
-            android:hint="birthdate_hint"
+            android:hint="Geburtstag"
             android:inputType="date"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -121,7 +121,7 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="address"
+            android:text="Adresse"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +148,7 @@
             android:layout_width="151dp"
             android:layout_height="45dp"
             android:ems="10"
-            android:hint="mail_hint"
+            android:hint="E-Mail"
             android:inputType="textEmailAddress"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -208,7 +208,7 @@
             android:text="Speichern"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.708"
+            app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.896" />
