--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/prename"
+    android:background="@mipmap/background_mountains"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".User.Register">
@@ -12,6 +13,7 @@
         android:layout_width="200dp"
         android:layout_height="32dp"
         android:text="Authentifizierung"
+        android:textColor="@color/cold_dark_blue"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +28,8 @@
         android:layout_height="60dp"
         android:ems="10"
         android:hint="Benutzername"
+        android:textColor="@color/cold_dark_blue"
+        android:textColorHint="@color/cold_dark_blue"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +43,8 @@
         android:layout_height="60dp"
         android:ems="10"
         android:hint="Mail"
+        android:textColorHint="@color/background"
+        android:textColor="@color/background"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,6 +58,8 @@
         android:layout_height="60dp"
         android:ems="10"
         android:hint="Password"
+        android:textColor="@color/background"
+        android:textColorHint="@color/background"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +72,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registrieren"
+
+        app:backgroundTint="@color/cold_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +85,7 @@
         android:layout_width="284dp"
         android:layout_height="17dp"
         android:text="@string/account_schon_vorhanden_hier_einloggen"
+        android:textColor="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -101,6 +112,8 @@
         android:layout_height="60dp"
         android:ems="10"
         android:hint="Vorname"
+        android:textColor="@color/cold_dark_blue"
+        android:textColorHint="@color/cold_dark_blue"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,6 +127,8 @@
         android:layout_height="60dp"
         android:ems="10"
         android:hint="Nachname"
+        android:textColor="@color/background"
+        android:textColorHint="@color/background"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
