--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/background_mountains"
     tools:context=".User.Login">
     <TextView
         android:id="@+id/textView2"
         android:layout_width="200dp"
         android:layout_height="32dp"
         android:text="Login"
+        android:textColor="@color/cold_dark_blue"
         android:gravity="center"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,6 +28,8 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:hint="Mail"
+        android:textColorHint="@color/background"
+        android:textColor="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +42,9 @@
         android:layout_height="60dp"
         android:ems="10"
         android:hint="Password"
+        android:textColorHint="@color/background"
         android:inputType="textPassword"
+        android:textColor="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Anmelden"
+        app:backgroundTint="@color/cold_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,21 +65,23 @@
 
     <TextView
         android:id="@+id/registerText"
-        android:layout_width="284dp"
-        android:layout_height="17dp"
+        android:layout_width="289dp"
+        android:layout_height="22dp"
         android:text="@string/noch_kein_account_hier_registrieren"
+        android:textColor="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.68"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.826" />
+        app:layout_constraintVertical_bias="0.829" />
 
     <TextView
         android:id="@+id/forgotPasswort"
         android:layout_width="151dp"
         android:layout_height="21dp"
         android:text="@string/passwort_vergessen"
+        android:textColor="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
