--- a/app/src/main/res/layout/fragment_challenge_creator.xml
+++ b/app/src/main/res/layout/fragment_challenge_creator.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/background"
     android:layout_height="match_parent"
     tools:context=".challenges.ChallengeCreator">
 
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/erstellen"
+        app:backgroundTint="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +40,8 @@
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:hint="Punktzahl"
+        android:textColorHint="@color/cold_dark_blue"
+        android:textColor="@color/cold_dark_blue"
         android:ellipsize="start"
         android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,10 +56,12 @@
             android:id="@+id/points_input"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="numberDecimal"
             android:digits="0123456789"
             android:ellipsize="start"
-            android:gravity="center_horizontal"/>
+            android:textColorHint="@color/cold_dark_blue"
+            android:textColor="@color/cold_dark_blue"
+            android:gravity="center_horizontal"
+            android:inputType="numberDecimal" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,6 +75,7 @@
         android:hint="Beschreibung"
         app:counterEnabled="true"
         app:counterMaxLength="100"
+        android:textColor="@color/cold_dark_blue"
         app:helperText="Maximale Zeichen:"
         app:helperTextEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +89,9 @@
             android:layout_width="match_parent"
             android:layout_height="71dp"
             android:autoSizeTextType="uniform"
+            android:textColorHint="@color/cold_dark_blue"
             android:ellipsize="start"
+            android:textColor="@color/cold_dark_blue"
             android:gravity="center_horizontal"
             android:inputType="textMultiLine" />
 
@@ -96,9 +105,11 @@
         android:ellipsize="start"
         android:gravity="center_horizontal"
         android:hint="Challenge-Titel"
+        android:textColorHint="@color/cold_dark_blue"
         app:counterEnabled="true"
         app:counterMaxLength="30"
         app:helperText="Maximale Zeichen:"
+        android:textColor="@color/cold_dark_blue"
         app:helperTextEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,6 +123,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:autoSizeTextType="uniform"
+            android:textColorHint="@color/cold_dark_blue"
+            android:textColor="@color/cold_dark_blue"
             android:ellipsize="start"
             android:gravity="center_horizontal"
             android:inputType="textMultiLine" />
