--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".challenges.Maps">
 
@@ -11,6 +12,8 @@
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
         android:layout_height="400dp"
+        android:textColorHint="@color/cold_dark_blue"
+        android:textColor="@color/cold_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -24,6 +27,8 @@
         android:layout_height="47dp"
         android:ems="10"
         android:inputType="number"
+        android:textColorHint="@color/cold_dark_blue"
+        android:textColor="@color/cold_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.437"
@@ -36,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="setLocation"
+        app:backgroundTint="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.96"
@@ -49,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SHOW"
+        app:backgroundTint="@color/cold_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.922"
@@ -64,6 +71,8 @@
         android:ellipsize="start"
         android:gravity="center_horizontal"
         android:hint="Aktuelle Koordinaten"
+        android:textColorHint="@color/cold_dark_blue"
+        android:textColor="@color/cold_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.43"
@@ -75,6 +84,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputCoordinates"
             android:layout_width="match_parent"
+            android:textColorHint="@color/cold_dark_blue"
+            android:textColor="@color/cold_dark_blue"
             android:layout_height="match_parent"
             android:ellipsize="start"
             android:gravity="center_horizontal"
