--- a/app/src/main/res/layout/fragment_challenge_overview.xml
+++ b/app/src/main/res/layout/fragment_challenge_overview.xml
@@ -47,11 +47,11 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/neverUsed"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="252dp"
+        android:layout_width="182dp"
         android:layout_height="58dp"
         android:ellipsize="start"
         android:gravity="center_horizontal"
-        android:hint="Challengetitel"
+        android:hint="Challenge-Titel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.14"
