--- a/app/src/main/res/layout/friends_main.xml
+++ b/app/src/main/res/layout/friends_main.xml
@@ -6,35 +6,21 @@
     android:background="@color/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:popupTheme="@style/Theme.MyEverest.PopupOverlay" />
-
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textViewUsername_friends"
         android:layout_width="117dp"
         android:layout_height="29dp"
         android:text="TextView"
         android:textColor="@color/cold_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.163"
+        app:layout_constraintHorizontal_bias="0.265"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.18" />
-
+        app:layout_constraintVertical_bias="0.223" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/profilePic_friends"
         android:layout_width="110dp"
         android:layout_height="105dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,17 +31,29 @@
         app:layout_constraintVertical_bias="0.177"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <ProgressBar
-        android:id="@+id/progress_friend"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="382dp"
-        android:layout_height="73dp"
+    <TextView
+        android:id="@+id/textViewPrename_friends"
+        android:layout_width="144dp"
+        android:layout_height="50dp"
+        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.949" />
+        app:layout_constraintVertical_bias="0.378" />
+
+    <TextView
+        android:id="@+id/textViewSurname_friends"
+        android:layout_width="144dp"
+        android:layout_height="50dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.831"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.378" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
